# brinjalhs

./: ChangeLog.md  LICENSE  README.md  brinjalhs.cabal  package.yaml
app/: Main.hs
src/BrinjalHs/: App.hs
src/BrinjalHs/App/: Api.hs
src/BrinjalHs/App/Api/: Up.hs
src/BrinjalHs/BL/HealthCheck/: Up.hs
src/BrinjalHs/Generics/: Infrastructure.hs  Logger.hs  Types.hs
src/BrinjalHs/Product/HealthCheck/: Up.hs
src/BrinjalHs/Server/: Server.hs
src/BrinjalHs/Server/Endpoints/: Up.hs
src/BrinjalHs/Types/Common/: Env.hs
src/BrinjalHs/Types/Communication/: Up.hs
