cabal-version: 2.2


name:           brinjalhs
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/puggeraponanna/brinjalhs#readme>
homepage:       https://github.com/puggeraponanna/brinjalhs#readme
bug-reports:    https://github.com/puggeraponanna/brinjalhs/issues
author:         Ponanna
maintainer:     pponanna@pm.me
copyright:      2021 Ponanna
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/puggeraponanna/brinjalhs

common common-extensions
  default-extensions:
    RecordWildCards
    , DataKinds
    , DerivingStrategies
    , TypeOperators
    , DeriveGeneric

library
  import: common-extensions
  exposed-modules:
      BrinjalHs.App
      BrinjalHs.Product.HealthCheck.Up
      BrinjalHs.Server.Endpoints.Up
      BrinjalHs.Server.Server
      BrinjalHs.Types.Common.Env
      BrinjalHs.Types.Communication.Up
      BrinjalHs.Generics.Infrastructure
  other-modules:
      Paths_brinjalhs
  hs-source-dirs:
      src
  build-depends:
      aeson
    , base >=4.7 && <5
    , mtl
    , servant
    , servant-client
    , servant-server
    , text
    , time
    , transformers
    , wai
    , wai-extra
    , warp
  default-language: Haskell2010
   

executable brinjalhs-exe
  import: common-extensions
  main-is: Main.hs
  other-modules:
      Paths_brinjalhs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson
    , base >=4.7 && <5
    , brinjalhs
    , mtl
    , servant
    , servant-client
    , servant-server
    , text
    , time
    , transformers
    , wai
    , wai-extra
    , warp
  default-language: Haskell2010

test-suite brinjalhs-test
  import: common-extensions
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_brinjalhs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson
    , base >=4.7 && <5
    , brinjalhs
    , mtl
    , servant
    , servant-client
    , servant-server
    , text
    , time
    , transformers
    , wai
    , wai-extra
    , warp
  default-language: Haskell2010
