cabal-version: 2.2


name:           brinjalhs
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/puggeraponanna/brinjalhs#readme>
homepage:       https://github.com/puggeraponanna/brinjalhs#readme
bug-reports:    https://github.com/puggeraponanna/brinjalhs/issues
author:         Ponanna
maintainer:     pponanna@pm.me
copyright:      2021 Ponanna
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/puggeraponanna/brinjalhs

common common-extensions
  default-extensions:
    RecordWildCards
    , DataKinds
    , DerivingStrategies
    , TypeOperators
    , DeriveGeneric
    , OverloadedStrings
    , ConstraintKinds
  build-depends:
      aeson
    , base ^>=4.14.3.0
    , mtl
    , servant
    , servant-client
    , servant-server
    , text
    , time
    , transformers
    , wai
    , wai-extra
    , warp
    , fast-logger
    , pretty-terminal
  default-language: Haskell2010
  ghc-options: -Werror

library
  import: common-extensions
  exposed-modules:
      BrinjalHs.App
      BrinjalHs.BL.HealthCheck.Up
      BrinjalHs.App.Api.Up
      BrinjalHs.App.Api
      BrinjalHs.Types.Common.Env
      BrinjalHs.Types.Communication.Up
      BrinjalHs.Generics.Infrastructure
      BrinjalHs.Generics.Logger
      BrinjalHs.Generics.Types 
  hs-source-dirs:
      src

executable brinjalhs
  import: common-extensions
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    brinjalhs

test-suite brinjalhs-test
  import: common-extensions
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test